syntax = "proto3";

package etl.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/AudiusProject/audiusd/pkg/api/etl/v1";

message PingRequest {}

message PingResponse {
  string message = 1;
}

message GetHealthRequest {}

message GetHealthResponse {}

message GetBlocksRequest {}

message GetBlocksResponse {}

message GetTransactionsRequest {}

message GetTransactionsResponse {}

message GetPlaysRequest {
  oneof query {
    GetPlays get_plays = 1;
    GetPlaysByAddress get_plays_by_address = 2;
    GetPlaysByUser get_plays_by_user = 3;
    GetPlaysByTimeRange get_plays_by_time_range = 4;
    GetPlaysByLocation get_plays_by_location = 5;
  }
}

message GetPlays {}

message GetPlaysByAddress {}

message GetPlaysByUser {}

message GetPlaysByTrack {}

message GetPlaysByTimeRange {}

message GetPlaysByLocation {}

message GetPlaysResponse {
  repeated GetPlayResponse plays = 1;
}

message GetPlayResponse {
  string address = 1;
  string track_id = 2;
  int64 timestamp = 3;
  string city = 4;
  string country = 5;
  string region = 6;
  int64 block_height = 7;
  string tx_hash = 8;
}

message GetManageEntitiesRequest {
}

message GetManageEntitiesResponse {
  repeated GetManageEntityResponse manage_entities = 1;
}

message GetManageEntityResponse {
  string address = 1;
  string entity_type = 2;
  int64 entity_id = 3;
  string action = 4;
  string metadata = 5;
  string signature = 6;
  string signer = 7;
  string nonce = 8;
  int64 block = 9;
  string tx_hash = 10;
}

message GetValidatorsRequest {
  oneof query {
    GetRegisteredValidators get_registered_validators = 1;
    GetValidatorRegistrations get_validator_registrations = 2;
    GetValidatorDeregistrations get_validator_deregistrations = 3;
  }
}

message GetRegisteredValidators {}
message GetValidatorRegistrations {}
message GetValidatorDeregistrations {}

message GetValidatorsResponse {}

message GetValidatorResponse {
  string address = 1;
  string validator_address = 2;
  int64 block_height = 3;
  string tx_hash = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message GetLocationRequest {
  oneof query {
    GetAvailableCities get_available_cities = 1;
    GetAvailableRegions get_available_regions = 2;
    GetAvailableCountries get_available_countries = 3;
  }
}

message GetAvailableCities {}
message GetAvailableRegions {}
message GetAvailableCountries {}

message GetLocationResponse {
}
